# swig-matlab

./: .gitignore  CMakeLists.txt  install_prereqs.sh
src/: CMakeLists.txt  eigen_matlab.i  example.cpp  example.h  example.i
